# my-openenv

./: .gitignore  Dockerfile  LICENSE  README.md  create_diagram.py  inference.py  main.py  models.py  openenv.yaml  pre_validate.py  pyproject.toml  test_env.py  validate-submission.sh
datasets/: easy_tasks.json  hard_tasks.json  medium_tasks.json
email_triage_env/: openenv.yaml
email_triage_env/datasets/: easy_tasks.json  hard_tasks.json
email_triage_env/server/: app.py  environment.py
server/: app.py  environment.py
