[project]
name = "email-triage-env"
version = "0.1.0"
description = "A mini RL environment for email triage and prioritization."
dependencies = [
    "openenv-core",
    "gymnasium",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai"
]

[project.scripts]
server = "email_triage_env.server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
